Add buttons on cart

--- a/public/components/cart/cart-element.html
+++ b/public/components/cart/cart-element.html
@@ -15,9 +15,17 @@
                         <div class="col-12 col-md-3">
                             <div class="container px-0">
                                 <div class="row">
-                                    <span class="col-4 fa fa-minus-circle minus-button"></span>
-                                    <div class="col-4"><h5 class="book-qty">#</h5></div>
-                                    <span class="col-4 fa fa-plus-circle plus-button"></span>
+                                    <div class="col-4">
+                                        <button class="btn btn-primary btn-sm text-white minus-button rounded-pill mx-2">
+                                            <i class="fa fa-minus"></i>
+                                        </button>
+                                    </div>
+                                    <div class="col-4"><h5 class="book-qty text-center">#</h5></div>
+                                    <div class="col-4">
+                                        <button class="btn btn-primary btn-sm text-white plus-button rounded-pill mx-2">
+                                            <i class="fa fa-plus"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -25,7 +33,11 @@
                             <div class="container px-0">
                                 <div class="row">
                                     <div class="col-9"><h5 class="book-price">€ 15.00</h5></div>
-                                    <span class="col-3 fa fa-trash trash-button"></span>
+                                    <div class="col-3">
+                                        <button class="btn btn-primary btn-sm text-white trash-button mx-2">
+                                            <i class="fa fa-trash"></i>
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
