Working on author.

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -28,8 +28,7 @@
             <div class="navbar-collapse collapse" id="navbarIcons">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" id="shopping-cart" data-toggle="collapse" data-target="" aria-controls=""
-                           ara-expanded="false">
+                        <a href="/profile/cart" class="nav-link">
                             <span class="fa font-weight-bold text-white fa-shopping-cart"></span>
                         </a>
                     </li>
