Finished author page

--- a/public/components/review/rating/rating.html
+++ b/public/components/review/rating/rating.html
@@ -1,7 +1,7 @@
 <div class="icons d-inline">
-    <i class="rating-icon fa text-pink"></i>
-    <i class="rating-icon fa text-pink"></i>
-    <i class="rating-icon fa text-pink"></i>
-    <i class="rating-icon fa text-pink"></i>
-    <i class="rating-icon fa text-pink"></i>
+    <i class="rating-icon fa"></i>
+    <i class="rating-icon fa"></i>
+    <i class="rating-icon fa"></i>
+    <i class="rating-icon fa"></i>
+    <i class="rating-icon fa"></i>
 </div>
