--- a/public/author/author.scss
+++ b/public/author/author.scss
@@ -192,19 +192,21 @@ $related-align: $related-book-section-margin + ($carousel-height + 2 * $padding)
     }
 }
 
-.book-reviews {
+.author-reviews {
     position: relative;
     bottom: 0;
     margin-top: - ($carousel-height + 2 * $carousel-margin) / 2;
 }
 
 
-.book-reviews > .container {
+.author-reviews > .container {
     height: 100%;
     padding-top: ($carousel-height + 2 * $carousel-margin) / 2 + 5rem;
 }
 
 
-.book-image img {
-    width: 100%;
+.author-image .img {
+    width: 300px;
+    height: 300px;
+    background-size: cover;
 }
