--- a/public/components/modal/templates/alert.html
+++ b/public/components/modal/templates/alert.html
@@ -8,6 +8,12 @@
                 </button>
             </div>
             <div class="modal-body">
+                <div class="message">
+
+                </div>
+                <div class="error font-italic">
+
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-dismiss="modal">Close</button>
