--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -90,11 +90,13 @@ $theme-colors: (
 }
 
 body {
+    /*
     font-family: 'Open Sans', sans-serif;
     font-weight: lighter;
     h1, h2, h3, h4, h5, h6, .title {
         font-family: 'Nunito', sans-serif;
     }
+    */
 }
 
 .linear-gradient {
