Added wishlist add/remove in search results

--- a/public/components/search/book.html
+++ b/public/components/search/book.html
@@ -27,8 +27,15 @@
                 <h5 class="ml-2 text-gray d-inline"><span class="book-rating-val">0</span>/5, (<span
                         class="book-rating-qty">0</span>)</h5>
             </div>
-            <div class="text-dark mt-3">
-                <h3><span class="price font-weight-bold">00,00</span> €</h3>
+            <div class="text-dark mt-3 d-flex justify-content-start" style="height: 3rem">
+                <div class="h-100 d-flex flex-column justify-content-center">
+                    <h3 class="d-inline"><span class="price font-weight-bold">00,00</span> €</h3>
+                </div>
+                <div class="ml-3 h-100 d-flex flex-column justify-content-center">
+                    <button class="d-inline btn rounded-circle btn-outline-pink btn-sm wishlist" type="button">
+                        <i class="fa fa-heart-o"></i>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
