--- a/public/components/cart/cart-element.html
+++ b/public/components/cart/cart-element.html
@@ -1,41 +1,41 @@
-<div class="container shopping-item border border-dark rounded mb-3">
+<div class="container shopping-item border border-dark rounded-bobooky mb-3">
     <div class="py-3">
-        <div class="row">
-            <div class="col-2">
+        <div class="row align-items-center">
+            <div class="col-4 col-sm-3 pl-4">
                 <img class="w-100 book-image"
                      src="https://images-na.ssl-images-amazon.com/images/I/51DA1hQNnJL._SX324_BO1,204,203,200_.jpg">
             </div>
-            <div class="col mb-0">
-                <div class="container px-0">
-                    <div class="row">
-                        <div class="my-auto col-12 col-md-4 title h-100 mb-0">
+            <div class="col h-100">
+                <div class="container h-100 px-0">
+                    <div class="row align-items-center h-100">
+                        <div class="col-12 col-md-4 title ">
                             <h5 class="book-title">Title</h5>
                             <h6 class="book-author">Author</h6>
                         </div>
-                        <div class="col-12 col-md-3">
-                            <div class="container px-0">
-                                <div class="row">
-                                    <div class="col-4">
-                                        <button class="btn btn-primary btn-sm text-white minus-button rounded-pill mx-2">
+                        <div class="col-12 col-md-3 p-0 m-0">
+                            <div class="container h-100">
+                                <div class="row h-100 mt-2">
+                                    <div class="col-4 align-self-center">
+                                        <button class="btn btn-primary btn-sm minus-button text-white btn-circle-bobooky">
                                             <i class="fa fa-minus"></i>
                                         </button>
                                     </div>
-                                    <div class="col-4"><h5 class="book-qty text-center">#</h5></div>
-                                    <div class="col-4">
-                                        <button class="btn btn-primary btn-sm text-white plus-button rounded-pill mx-2">
+                                    <div class="col-1 align-self-center text-center"><h5 class="book-qty pt-2">#</h5></div>
+                                    <div class="col-4 align-self-center">
+                                        <button class="btn btn-primary btn-sm text-white plus-button btn-circle-bobooky">
                                             <i class="fa fa-plus"></i>
                                         </button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-md-5">
-                            <div class="container px-0">
-                                <div class="row">
-                                    <div class="col-9"><h5 class="book-price">€ 15.00</h5></div>
-                                    <div class="col-3">
-                                        <button class="btn btn-primary btn-sm text-white trash-button mx-2">
-                                            <i class="fa fa-trash"></i>
+                        <div class="col-12 col-md-5 h-100">
+                            <div class="container h-100 mt-2 px-0">
+                                <div class="row h-100 align-items-center">
+                                    <div class="col-9 text-center pt-2"><h5 class="book-price">€ 15.00</h5></div>
+                                    <div class="col-3 px-0">
+                                        <button class="btn btn-default text-primary trash-button pl-0 ">
+                                            <i class="fa fa-trash fa-2x"></i>
                                         </button>
                                     </div>
                                 </div>
