--- a/public/components/loading/loading.html
+++ b/public/components/loading/loading.html
@@ -3,8 +3,9 @@ Loading template
 You can use this either by manually injecting it right after the <body> tag for immediate display
 Or you can inject it with its own controller (loading.js). Note that in the latter case there will be some delay.
 -->
-<div class="loading d-flex flex-column justify-content-center">
+<div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
-        <h1 class="display-1">Loading..</h1>
+        <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
+        <img class="mt-5" src="/assets/logo_white.png" alt="Bobooky">
     </div>
 </div>
