--- a/public/lib/scss/bobooky-theme.css
+++ b/public/lib/scss/bobooky-theme.css
@@ -10329,10 +10329,6 @@ h3 {
   background-color: #ffc107;
 }
 
-.bobooky.form-control:focus {
-  border-color: white;
-}
-
 .form-group {
   position: relative;
   margin-bottom: 2rem;
@@ -10373,6 +10369,10 @@ h3 {
   color: #0D71B9;
 }
 
+.bobooky-primary.form-control:focus {
+  border-color: #0D71B9;
+}
+
 /*
     Themed placeholders
  */
@@ -10396,6 +10396,10 @@ input.placeholder-primary::placeholder {
 
 .form-placeholder-secondary .form-control::placeholder {
   color: #05AB9E;
+}
+
+.bobooky-secondary.form-control:focus {
+  border-color: #05AB9E;
 }
 
 /*
@@ -10423,6 +10427,10 @@ input.placeholder-secondary::placeholder {
   color: #28a745;
 }
 
+.bobooky-success.form-control:focus {
+  border-color: #28a745;
+}
+
 /*
     Themed placeholders
  */
@@ -10446,6 +10454,10 @@ input.placeholder-success::placeholder {
 
 .form-placeholder-info .form-control::placeholder {
   color: #17a2b8;
+}
+
+.bobooky-info.form-control:focus {
+  border-color: #17a2b8;
 }
 
 /*
@@ -10473,6 +10485,10 @@ input.placeholder-info::placeholder {
   color: #F7BC5D;
 }
 
+.bobooky-warning.form-control:focus {
+  border-color: #F7BC5D;
+}
+
 /*
     Themed placeholders
  */
@@ -10496,6 +10512,10 @@ input.placeholder-warning::placeholder {
 
 .form-placeholder-danger .form-control::placeholder {
   color: #AD2528;
+}
+
+.bobooky-danger.form-control:focus {
+  border-color: #AD2528;
 }
 
 /*
@@ -10523,6 +10543,10 @@ input.placeholder-danger::placeholder {
   color: #f8f9fa;
 }
 
+.bobooky-light.form-control:focus {
+  border-color: #f8f9fa;
+}
+
 /*
     Themed placeholders
  */
@@ -10546,6 +10570,10 @@ input.placeholder-light::placeholder {
 
 .form-placeholder-dark .form-control::placeholder {
   color: #21263F;
+}
+
+.bobooky-dark.form-control:focus {
+  border-color: #21263F;
 }
 
 /*
@@ -10573,6 +10601,10 @@ input.placeholder-dark::placeholder {
   color: #F39325;
 }
 
+.bobooky-orange.form-control:focus {
+  border-color: #F39325;
+}
+
 /*
     Themed placeholders
  */
@@ -10596,6 +10628,10 @@ input.placeholder-orange::placeholder {
 
 .form-placeholder-pink .form-control::placeholder {
   color: #E83273;
+}
+
+.bobooky-pink.form-control:focus {
+  border-color: #E83273;
 }
 
 /*
@@ -10623,6 +10659,10 @@ input.placeholder-pink::placeholder {
   color: #8E3089;
 }
 
+.bobooky-purple.form-control:focus {
+  border-color: #8E3089;
+}
+
 /*
     Themed placeholders
  */
@@ -10648,6 +10688,10 @@ input.placeholder-purple::placeholder {
   color: white;
 }
 
+.bobooky-white.form-control:focus {
+  border-color: white;
+}
+
 /*
     Themed placeholders
  */
@@ -10671,6 +10715,10 @@ input.placeholder-white::placeholder {
 
 .form-placeholder-gray .form-control::placeholder {
   color: #737373;
+}
+
+.bobooky-gray.form-control:focus {
+  border-color: #737373;
 }
 
 /*
@@ -10714,7 +10762,11 @@ body {
 }
 
 .rounded-bobooky {
-  border-radius: 2.5rem;
+  border-radius: 2rem;
+}
+
+.btn-circle-bobooky {
+  border-radius: 50% !important;
 }
 
 /*# sourceMappingURL=bobooky-theme.css.map */
