--- a/public/lib/scss/bobooky-theme.scss
+++ b/public/lib/scss/bobooky-theme.scss
@@ -18,9 +18,6 @@ $theme-colors: (
 
 ::selection { background-color: $yellow; }
 
-.bobooky.form-control:focus {
-   border-color: white;
-}
 
 .form-group {
     position: relative;
@@ -65,6 +62,11 @@ $theme-colors: (
         color: $color
     }
 
+    .bobooky-#{$key}.form-control:focus {
+        border-color: $color
+    }
+
+
     /*
         Themed placeholders
      */
@@ -107,5 +109,10 @@ body {
 }
 
 .rounded-bobooky {
-    border-radius: 2.5rem;
+    border-radius: 2rem;
 }
+
+.btn-circle-bobooky {
+    border-radius: 50% !important;
+}
+
