Fix style orders

--- a/public/components/order/order-element.html
+++ b/public/components/order/order-element.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col order-container">
-        <div class="container order-item border border-secondary rounded-bobooky mb-3">
-            <div class="row bg-secondary rounded-bottom rounded-bobooky">
+        <div class="container order-item border border-secondary rounded-bobooky mb-3 overflow-hidden">
+            <div class="row bg-secondary">
                 <div class="col-12 col-md-4">
                     <div class="container">
                         Ordered on <br/>
