--- a/public/components/order/order-book-element.html
+++ b/public/components/order/order-book-element.html
@@ -1,7 +1,7 @@
-<div class="container order-book-element mb-3">
+<div class="container order-book-element">
     <div class="py-3">
         <div class="row align-items-center">
-            <div class="col-4 col-sm-3 pl-4">
+            <div class="col-3 col-sm-3 pl-4">
                 <img class="w-100 book-image"
                      src="https://images-na.ssl-images-amazon.com/images/I/51DA1hQNnJL._SX324_BO1,204,203,200_.jpg"
                     style="max-width: 100px">
@@ -17,15 +17,15 @@
                             <div class="container h-100">
                                 <div class="row h-100 mt-2">
                                     <h5 class="book-qty">2</h5>
-                                    <h5>x</h5>
+                                    <h5 class="mx-2">x</h5>
                                     <h5 class="book-price">€ 13.50</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-3 h-100">
-                            <button class="btn btn-default btn-secondary rounded-pill buy-button pl-0">
+                            <a class="btn btn-default btn-secondary rounded-pill buy-button" href="">
                                 Buy again
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
