Working on homepage + more.

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -56,10 +56,10 @@
                         <div class="col col-xl-8 m-auto d-md-flex justify-content-center">
                             <div>
                                 <h2 class="text-white m-0">
-                                    <span class="font-weight-bold">first time?</span>
+                                        <span class="font-weight-bold">first time?</span>
                                 </h2>
                                 <h2 class="text-dark m-0">
-                                    <a href="/profile/register">
+                                    <a href="/register">
                                         <span class="font-weight-bold text-dark"><u>register now!</u></span>
                                     </a>
                                 </h2>
