--- a/public/components/order/order-element.html
+++ b/public/components/order/order-element.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col order-container">
         <div class="container order-item border border-secondary rounded-bobooky mb-3 overflow-hidden">
-            <div class="row bg-secondary">
+            <div class="row bg-secondary py-3">
                 <div class="col-12 col-md-4">
                     <div class="container">
                         Ordered on <br/>
-                        Data a caso
+                        dd/mm/yyyy
                     </div>
                 </div>
                 <div class="col-12 col-md-8">
@@ -13,10 +13,10 @@
                         <div class="row">
                             <div class="col-8">
                                 Sent to <br/>
-                                Nome a caso
+                                Address
                             </div>
                             <div class="col-4">
-                                Total € 45
+                                Total € 00,00
                             </div>
                         </div>
                     </div>
