--- a/public/components/search/book.html
+++ b/public/components/search/book.html
@@ -6,7 +6,7 @@
         <div class="col-12 col-md text-gray">
             <div class="text-pink">
                 <a href="#" class="text-pink book-href text-decoration-none">
-                    <h4 class="title text-uppercase font-weight-bold">Title</h4>
+                    <h4 class="title text-capitalize font-weight-bold">Title</h4>
                 </a>
             </div>
             <div>
@@ -15,17 +15,17 @@
                 </a>
             </div>
             <div class="mt-3">
-                <h5 class="date">Date</h5>
+                <h6 class="date">Date</h6>
             </div>
             <div class="">
-                <h5 class="genres text-capitalize">Genres / Genres</h5>
+                <h6 class="genres text-capitalize">Genres / Genres</h6>
             </div>
             <div class="">
-                <h5 class="theme text-capitalize">Theme</h5>
+                <h6 class="theme text-capitalize">Theme</h6>
             </div>
             <div class="rating text-pink">
-                <h5 class="ml-2 text-gray d-inline"><span class="book-rating-val">0</span>/5, (<span
-                        class="book-rating-qty">0</span>)</h5>
+                <h6 class="ml-2 text-gray d-inline"><span class="book-rating-val">0</span>/5, (<span
+                        class="book-rating-qty">0</span>)</h6>
             </div>
             <div class="text-dark mt-3 d-flex justify-content-start" style="height: 3rem">
                 <div class="h-100 d-flex flex-column justify-content-center">
