--- a/public/profile/order/order.css
+++ b/public/profile/order/order.css
@@ -1,9 +1,5 @@
 .book-element-container .order-book-element:last-child {
-  border-bottom: hidden;
-}
+  border-bottom: hidden; }
 
 .book-element-container .order-book-element {
-  border-bottom: 1px solid white;
-}
-
-/*# sourceMappingURL=order.css.map */
+  border-bottom: 1px solid white; }
