Dropup menu for addresses

--- a/public/components/address/address.html
+++ b/public/components/address/address.html
@@ -8,19 +8,15 @@
             <label class="col-form-label-md mx-3 city">City</label>
             <label class="col-form-label-md country">Country</label>
 
-            <span class="fa text-secondary float-right fa-ellipsis-h fa-2x"></span>
-           <!-- not working dropup menu -->
-            <!--
             <div class="btn-group dropup float-right">
-                <button type="button" class="btn dropdown-toggle dropdown-toggle-split" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn dropdown-toggle-split" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="fa text-secondary fa-ellipsis-h fa-2x"></span>
                 </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenu">
-                    <a class="dropdown-item" href="#">Edit</a>
-                    <a class="dropdown-item" href="#">Delete</a>
+                <div class="dropdown-menu bg-secondary border-0" aria-labelledby="dropdownMenu">
+                    <a class="dropdown-item text-white" href="#">Edit <span class="fa text-white fa-edit align-end float-right"></span></a>
+                    <a class="dropdown-item text-white trash-button" href="#">Delete <span class="fa text-white fa-trash float-right "></span></a>
                 </div>
             </div>
-            -->
         </div>
     </div>
 </div>
