--- a/public/profile/account/scss/index.scss
+++ b/public/profile/account/scss/index.scss
@@ -16,6 +16,11 @@
   }
 }
 
+div.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
 
 .main {
   font-size: 18pt;
@@ -36,3 +41,4 @@
 .profile-header-placeholder {
   margin-top: 55px;
 }
+
