Added /search/genres & /search/themes + minor bug fixing.

--- a/public/profile/order/order.css
+++ b/public/profile/order/order.css
@@ -1,5 +1,9 @@
 .book-element-container .order-book-element:last-child {
-  border-bottom: hidden; }
+  border-bottom: hidden;
+}
 
 .book-element-container .order-book-element {
-  border-bottom: 1px solid white; }
+  border-bottom: 1px solid white;
+}
+
+/*# sourceMappingURL=order.css.map */
