All themes/genre

--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -77,7 +77,7 @@
                             <form class="form-white form-placeholder-white" id="register-login-form">
                                 <div class="form-row">
                                     <div class="col-12 col-md">
-                                        <input type="text" class="form-control" name="username"
+                                        <input type="text" class="form-control" name="email"
                                                placeholder="username">
                                     </div>
                                     <div class="col-12 col-md">
