--- a/public/lib/bootstrap/scss/_navbar.scss
+++ b/public/lib/bootstrap/scss/_navbar.scss
@@ -7,7 +7,7 @@
 // Navbar divider
 // Responsive navbar
 // Navbar position
-// Navbar themes
+// Navbar discover
 
 
 // Navbar
@@ -185,7 +185,7 @@
 }
 
 
-// Navbar themes
+// Navbar discover
 //
 // Styles for switching between navbars with light or dark background.
 
