--- a/public/profile/account/scss/index.css
+++ b/public/profile/account/scss/index.css
@@ -11,10 +11,29 @@
   }
 }
 
-div.sticky {
+.side-item {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+@media (min-width: 768px) {
+  .side-item {
+    position: absolute;
+  }
+}
+
+.side-item-right {
+  position: relative;
+  float: right;
+  width: 100%;
+  height: 100%;
+}
+
+.make-me-sticky {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  padding: 0 15px;
 }
 
 .main {
@@ -35,6 +54,11 @@ div.sticky {
 
 .profile-header-placeholder {
   margin-top: 55px;
+}
+
+.dropdown-menu > li > a:hover {
+  background-color: red;
+  background-image: none;
 }
 
 /*# sourceMappingURL=index.css.map */
