--- a/public/profile/account/scss/index.scss
+++ b/public/profile/account/scss/index.scss
@@ -16,10 +16,28 @@
   }
 }
 
-div.sticky {
+.side-item {
+position: relative;
+  width: 100%;
+  height: 100%;
+  @include media-breakpoint-up(md) {
+    position: absolute;
+  }
+}
+
+.side-item-right {
+  position: relative;
+  float: right;
+  width: 100%;
+  height: 100%;
+}
+
+.make-me-sticky {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+
+  padding: 0 15px;
 }
 
 .main {
@@ -40,5 +58,10 @@ div.sticky {
 
 .profile-header-placeholder {
   margin-top: 55px;
+}
+
+.dropdown-menu > li > a:hover {
+  background-color: red;
+  background-image: none;
 }
 
