--- a/public/components/address/address.html
+++ b/public/components/address/address.html
@@ -9,13 +9,13 @@
             <label class="col-form-label-md country">Country</label>
 
             <div class="btn-group dropup float-right">
-                <button type="button" class="btn dropdown-toggle-split" id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button type="button" class="btn no-glow dropdown-toggle-split " id="dropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span class="fa text-secondary fa-ellipsis-h fa-2x"></span>
                 </button>
-                <div class="dropdown-menu bg-secondary border-0" aria-labelledby="dropdownMenu">
-                    <a class="dropdown-item text-white" href="#">Edit <span class="fa text-white fa-edit align-end float-right"></span></a>
-                    <a class="dropdown-item text-white trash-button" href="#">Delete <span class="fa text-white fa-trash float-right "></span></a>
-                </div>
+                <ul class="dropdown-menu dropdown-menu-right bg-secondary border-0" aria-labelledby="dropdownMenu">
+                    <li><a class="dropdown-item text-white" href="#">Edit </a></li>
+                    <li><a class="dropdown-item text-white trash-button" href="#">Delete </a></li>
+                </ul>
             </div>
         </div>
     </div>
