--- a/public/profile/cart/scss/cart.scss
+++ b/public/profile/cart/scss/cart.scss
@@ -2,6 +2,7 @@
 
 .summary-container {
   height: 70vh;
+  max-height: 450px;
   position: -webkit-sticky; /* Safari */
   position: sticky;
   top: 100px;
