Discover themes with links

--- a/public/index.css
+++ b/public/index.css
@@ -89,4 +89,9 @@
   box-shadow: none;
 }
 
+.no-glow:focus, .no-glow:active {
+  outline: none !important;
+  box-shadow: none;
+}
+
 /*# sourceMappingURL=index.css.map */
