--- a/public/index.scss
+++ b/public/index.scss
@@ -148,3 +148,8 @@ $img_h : 1.6 * $img_w;
   outline: none !important;
   box-shadow: none;
 }
+
+.no-glow:focus, .no-glow:active {
+  outline: none !important;
+  box-shadow: none;
+}
