--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -1,14 +1,20 @@
 <!-- NAVBAR -->
 <div class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark unscrolled">
-        <div class="container">
-            <a class="navbar-brand" href="/">
-                <img src="/assets/logo_white.png"/>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText, #navbarIcons"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+        <div class="container bg-success">
+            <div class="col-1">
+                <button class="navbar-toggler bg-warning border-0 no-glow" type="button" data-toggle="collapse" data-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="col-2 bg-danger float-left">
+                <a class="navbar-brand" href="/">
+                    <img src="/assets/logo_white.png"/>
+                </a>
+            </div>
+
+            <!-- MENù DA MOBILE A TENDINA -->
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -25,25 +31,28 @@
                     </li>
                 </ul>
             </div>
-            <div class="navbar-collapse collapse" id="navbarIcons">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="/profile/cart" class="nav-link">
-                            <span class="fa font-weight-bold text-white fa-shopping-cart"></span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <span class="fa font-weight-bold text-white fa-heart"></span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
-                           aria-expanded="false">
-                            <span class="fa font-weight-bold text-white fa-user"></span>
-                        </a>
-                    </li>
-                </ul>
+
+            <div class="row">
+                <div class="navbar-collapse" id="navbarIcons">
+                    <ul class="navbar-nav list-inline ml-auto">
+                        <li class="nav-item list-inline-item">
+                            <a href="/profile/cart" class="nav-link">
+                                <span class="fa font-weight-bold text-white fa-shopping-cart"></span>
+                            </a>
+                        </li>
+                        <li class="nav-item list-inline-item">
+                            <a class="nav-link" href="#">
+                                <span class="fa font-weight-bold text-white fa-heart"></span>
+                            </a>
+                        </li>
+                        <li class="nav-item list-inline-item">
+                            <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
+                               aria-expanded="false">
+                                <span class="fa font-weight-bold text-white fa-user"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -56,15 +65,16 @@
                         <div class="col col-xl-8 m-auto d-md-flex justify-content-center">
                             <div>
                                 <h2 class="text-white m-0">
-                                        <span class="font-weight-bold">first time?</span>
+                                    <span class="font-weight-bold">first time?</span>
                                 </h2>
                                 <h2 class="text-dark m-0">
-                                    <a href="/register">
-                                        <span class="font-weight-bold text-dark"><u>register now!</u></span>
+                                    <a href="/profile/register">
+                                        <a href="/register">
+                                            <span class="font-weight-bold text-dark"><u>register now!</u></span>
+                                        </a>
                                     </a>
                                 </h2>
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -77,8 +87,8 @@
                             <form class="form-white form-placeholder-white" id="register-login-form">
                                 <div class="form-row">
                                     <div class="col-12 col-md">
-                                        <input type="text" class="form-control" name="email"
-                                               placeholder="username">
+                                        <input type="text" class="form-control" name="username"
+                                               placeholder="email">
                                     </div>
                                     <div class="col-12 col-md">
                                         <input type="password" class="form-control" name="password"
