--- a/public/discover/discover.scss
+++ b/public/discover/discover.scss
@@ -1,5 +1,4 @@
 .discover-section {
-
     position: absolute;
     left: 0;
     top: 0;
@@ -12,17 +11,12 @@
     background-size: cover;
 }
 
-.nav-item > a {
-    font-size: 24px;
-}
-
-$radius : 10px;
 
 .blurred-bg {
     z-index: -99;
     background-color: #21263F;
-    opacity: 0.6;
-    filter: opacity($radius);
+    opacity: 0.7;
+    filter: opacity(70px);
 }
 
 .text {
