--- a/public/components/navbar/navbar.html
+++ b/public/components/navbar/navbar.html
@@ -1,20 +1,14 @@
 <!-- NAVBAR -->
 <div class="">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark unscrolled">
-        <div class="container bg-success">
-            <div class="col-1">
-                <button class="navbar-toggler bg-warning border-0 no-glow" type="button" data-toggle="collapse" data-target="#navbarText"
-                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="col-2 bg-danger float-left">
-                <a class="navbar-brand" href="/">
-                    <img src="/assets/logo_white.png"/>
-                </a>
-            </div>
-
-            <!-- MENù DA MOBILE A TENDINA -->
+        <div class="container">
+            <a class="navbar-brand" href="/">
+                <img src="/assets/logo_white.png"/>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText, #navbarIcons"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
@@ -31,28 +25,25 @@
                     </li>
                 </ul>
             </div>
-
-            <div class="row">
-                <div class="navbar-collapse" id="navbarIcons">
-                    <ul class="navbar-nav list-inline ml-auto">
-                        <li class="nav-item list-inline-item">
-                            <a href="/profile/cart" class="nav-link">
-                                <span class="fa font-weight-bold text-white fa-shopping-cart"></span>
-                            </a>
-                        </li>
-                        <li class="nav-item list-inline-item">
-                            <a class="nav-link" href="#">
-                                <span class="fa font-weight-bold text-white fa-heart"></span>
-                            </a>
-                        </li>
-                        <li class="nav-item list-inline-item">
-                            <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
-                               aria-expanded="false">
-                                <span class="fa font-weight-bold text-white fa-user"></span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="navbar-collapse collapse" id="navbarIcons">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="/profile/cart" class="nav-link">
+                            <span class="fa font-weight-bold text-white fa-shopping-cart"></span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span class="fa font-weight-bold text-white fa-heart"></span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="profile-button" data-toggle="collapse" data-target="" aria-controls=""
+                           aria-expanded="false">
+                            <span class="fa font-weight-bold text-white fa-user"></span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -75,6 +66,7 @@
                                     </a>
                                 </h2>
                             </div>
+
                         </div>
                     </div>
                 </div>
