--- a/public/components/navbar/navbar.scss
+++ b/public/components/navbar/navbar.scss
@@ -2,7 +2,7 @@
 @import '../../lib/bootstrap/scss/functions';
 @import "../../lib/bootstrap/scss/variables";
 @import "../../lib/bootstrap/scss/mixins/breakpoints";
-$logo-height: 25px;
+$logo-height: 30px;
 
 .navbar.scrolled {
   transition: background-color 200ms linear;
@@ -11,44 +11,38 @@ $logo-height: 25px;
   transition: background-color 200ms linear;
 }
 
-#shopping-cart-ribbon {
-  width: 576px;
-  height: calc(100vh - 56px);
-  right: 8%;
-  position: absolute;
-  z-index: 1000;
-  @include media-breakpoint-down(xs) {
-    width: 100%;
-    right: 0;
-  }
+
+div .blurred-bg {
+  position: relative;
+  background: $bobooky-dark;
+  opacity: 0.9;
 }
 
-.blurred-bg {
-  background: rgba(0, 0, 0, 0.8);
+div .blurred-bg:before {
+  content: '';
+  position:absolute;
+  background: $bobooky-dark;
+  filter:blur(5px);
 }
 
 .objects {
   max-height: calc(100vh - 156px);
 }
 
-#cart-title{
-  height: 50px;
-}
 
-#cart-bottom{
-  height: 50px;
-}
 
-//TODO: fix this shit
-.container {
-  -ms-overflow-style: none;  // IE 10+
-  scrollbar-width: none;  // Firefox
-}
-.container::-webkit-scrollbar {
-  display: none;  // Safari and Chrome
-}
-
-.navbar-brand img {
+.navbar-brand-b img {
   height: $logo-height;
+  @include media-breakpoint-down(md) {
+    height: 20px;
+  }
 }
 
+.sub-menu {
+  @include media-breakpoint-down(md) {
+    display: none,
+  }
+}
+
+
+//Esperimenti
