--- a/public/lib/scss/bobooky-theme.css
+++ b/public/lib/scss/bobooky-theme.css
@@ -25,7 +25,7 @@
   --info: #17a2b8;
   --warning: #F7BC5D;
   --danger: #AD2528;
-  --light: #f8f9fa;
+  --light: #999999;
   --dark: #21263F;
   --orange: #F39325;
   --pink: #E83273;
@@ -1681,21 +1681,21 @@ pre code {
 .table-light,
 .table-light > th,
 .table-light > td {
-  background-color: #fdfdfe;
+  background-color: #e2e2e2;
 }
 .table-light th,
 .table-light td,
 .table-light thead th,
 .table-light tbody + tbody {
-  border-color: #fbfcfc;
+  border-color: #cacaca;
 }
 
 .table-hover .table-light:hover {
-  background-color: #ececf6;
+  background-color: #d5d5d5;
 }
 .table-hover .table-light:hover > td,
 .table-hover .table-light:hover > th {
-  background-color: #ececf6;
+  background-color: #d5d5d5;
 }
 
 .table-dark,
@@ -2563,29 +2563,29 @@ fieldset:disabled a.btn {
 
 .btn-light {
   color: #212529;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  background-color: #999999;
+  border-color: #999999;
 }
 .btn-light:hover {
-  color: #212529;
-  background-color: #e2e6ea;
-  border-color: #dae0e5;
+  color: #fff;
+  background-color: #868686;
+  border-color: gray;
 }
 .btn-light:focus, .btn-light.focus {
-  box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(135, 136, 136, 0.5);
 }
 .btn-light.disabled, .btn-light:disabled {
   color: #212529;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  background-color: #999999;
+  border-color: #999999;
 }
 .btn-light:not(:disabled):not(.disabled):active, .btn-light:not(:disabled):not(.disabled).active, .show > .btn-light.dropdown-toggle {
-  color: #212529;
-  background-color: #dae0e5;
-  border-color: #d3d9df;
+  color: #fff;
+  background-color: gray;
+  border-color: #797979;
 }
 .btn-light:not(:disabled):not(.disabled):active:focus, .btn-light:not(:disabled):not(.disabled).active:focus, .show > .btn-light.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(216, 217, 219, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(135, 136, 136, 0.5);
 }
 
 .btn-dark {
@@ -2901,28 +2901,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-light {
-  color: #f8f9fa;
-  border-color: #f8f9fa;
+  color: #999999;
+  border-color: #999999;
 }
 .btn-outline-light:hover {
   color: #212529;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  background-color: #999999;
+  border-color: #999999;
 }
 .btn-outline-light:focus, .btn-outline-light.focus {
-  box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(153, 153, 153, 0.5);
 }
 .btn-outline-light.disabled, .btn-outline-light:disabled {
-  color: #f8f9fa;
+  color: #999999;
   background-color: transparent;
 }
 .btn-outline-light:not(:disabled):not(.disabled):active, .btn-outline-light:not(:disabled):not(.disabled).active, .show > .btn-outline-light.dropdown-toggle {
   color: #212529;
-  background-color: #f8f9fa;
-  border-color: #f8f9fa;
+  background-color: #999999;
+  border-color: #999999;
 }
 .btn-outline-light:not(:disabled):not(.disabled):active:focus, .btn-outline-light:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-light.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(153, 153, 153, 0.5);
 }
 
 .btn-outline-dark {
@@ -4888,15 +4888,15 @@ a.badge-danger:focus, a.badge-danger.focus {
 
 .badge-light {
   color: #212529;
-  background-color: #f8f9fa;
+  background-color: #999999;
 }
 a.badge-light:hover, a.badge-light:focus {
   color: #212529;
-  background-color: #dae0e5;
+  background-color: gray;
 }
 a.badge-light:focus, a.badge-light.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(248, 249, 250, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(153, 153, 153, 0.5);
 }
 
 .badge-dark {
@@ -5095,15 +5095,15 @@ a.badge-gray:focus, a.badge-gray.focus {
 }
 
 .alert-light {
-  color: #818182;
-  background-color: #fefefe;
-  border-color: #fdfdfe;
+  color: #505050;
+  background-color: #ebebeb;
+  border-color: #e2e2e2;
 }
 .alert-light hr {
-  border-top-color: #ececf6;
+  border-top-color: #d5d5d5;
 }
 .alert-light .alert-link {
-  color: #686868;
+  color: #373737;
 }
 
 .alert-dark {
@@ -5486,17 +5486,17 @@ a.badge-gray:focus, a.badge-gray.focus {
 }
 
 .list-group-item-light {
-  color: #818182;
-  background-color: #fdfdfe;
+  color: #505050;
+  background-color: #e2e2e2;
 }
 .list-group-item-light.list-group-item-action:hover, .list-group-item-light.list-group-item-action:focus {
-  color: #818182;
-  background-color: #ececf6;
+  color: #505050;
+  background-color: #d5d5d5;
 }
 .list-group-item-light.list-group-item-action.active {
   color: #fff;
-  background-color: #818182;
-  border-color: #818182;
+  background-color: #505050;
+  border-color: #505050;
 }
 
 .list-group-item-dark {
@@ -6395,13 +6395,13 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: #999999 !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
 button.bg-light:hover,
 button.bg-light:focus {
-  background-color: #dae0e5 !important;
+  background-color: gray !important;
 }
 
 .bg-dark {
@@ -6537,7 +6537,7 @@ button.bg-gray:focus {
 }
 
 .border-light {
-  border-color: #f8f9fa !important;
+  border-color: #999999 !important;
 }
 
 .border-dark {
@@ -10131,11 +10131,11 @@ a.text-danger:hover, a.text-danger:focus {
 }
 
 .text-light {
-  color: #f8f9fa !important;
+  color: #999999 !important;
 }
 
 a.text-light:hover, a.text-light:focus {
-  color: #cbd3da !important;
+  color: #737373 !important;
 }
 
 .text-dark {
@@ -10540,22 +10540,22 @@ input.placeholder-danger::placeholder {
   border-bottom: 1px solid;
   border-radius: 0;
   padding: 0;
-  color: #f8f9fa;
+  color: #999999;
 }
 
 .form-placeholder-light .form-control::placeholder {
-  color: #f8f9fa;
+  color: #999999;
 }
 
 .bobooky-light.form-control:focus {
-  border-color: #f8f9fa;
+  border-color: #999999;
 }
 
 /*
     Themed placeholders
  */
 input.placeholder-light::placeholder {
-  color: #f8f9fa;
+  color: #999999;
 }
 
 /*
